<resources>
    <string name="app_name">BonfireBooks</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="bonfire_uppercase">BONFIRE</string>
    <string name="login_instructions"><![CDATA[Please fill into your Hofstra ID and Password to log into your account]]></string>
    <string name="login_welcome">Login to Bonfire</string>
    <string name="hofstra_id">Hofstra ID:</string>
    <string name="login_now">Login Now</string>
    <string name="hint_hofstra_ID">h*********</string>
    <string name="password">Password:</string>
    <string name="password_hint">***********</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="display_name">Display Name:</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="example_hofstra_email">hofstrastudent@pride.hoftstra.edu</string>
    <string name="signup_instructions">Please fill in the fields below to create your account</string>
    <string name="signup_header">Create an Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pass_info">Enter your email address and we will send a link to reset your password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="example_phone">(123)&#8211;456&#8211;8790</string>

    <string name="all_books">All Books</string>
    <string name="new_additions">New Additions</string>

    <string name="sample_text">Sample Text</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium, urna pellentesque feugiat tincidunt, tortor nunc placerat nunc, in ultricies felis ipsum sit amet arcu. Proin eget metus in augue fermentum sollicitudin. Phasellus porttitor ornare enim, non malesuada justo hendrerit id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin varius ex at ante consequat, sit amet bibendum mauris pharetra. Maecenas molestie urna a est dignissim, non lacinia nisi blandit.</string>
    <string name="profile">Profile</string>
    <string name="sample_txt_user">USER</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_book">Upload Book</string>
    <string name="wishlist">Wishlist</string>
    <string name="order_history">Order History</string>
    <string name="notification">Notification</string>
    <string name="chats">Chats</string>
    <string name="enter_isbn">Enter ISBN (10 or 13):</string>
    <string name="price">Price:</string>
    <string name="condition">Condition:</string>
    <string name="publish_book">Publish Book</string>
    <string name="empty" />

    <string-array name="book_conditions">
        <item>Like-New</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_search">Book Search</string>
    <string name="book_title">Book Title:</string>
    <string name="search_ISBN">Search ISBN</string>
    <string name="description">Description:</string>
    <string name="author_s">Author(s):</string>
    <string name="finish_upload">Finish Upload</string>
    <string name="price_here">price here</string>
    <string name="wishlist_is_empty">Wishlist is Empty</string>
    <string name="explore">Explore</string>
    <string name="no_current_chats">No Current Chats</string>
    <string name="view_books">View Books</string>
    <string name="author">Author:</string>
    <string name="isbn_10">ISBN-10:</string>
    <string name="isbn_13">ISBN-13:</string>
    <string name="view_user_books">View User Books</string>
    <string name="view_all">View All</string>
    <string name="new_books">New Books</string>
    <string name="offers">Offers</string>
    <string name="seller">Seller:</string>
    <string name="message_seller">Message Seller</string>
    <string name="email_seller">Email Seller</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_photos">Change Photos</string>
    <string name="set_public">Set Public</string>
    <string name="no_message_history">No Message History</string>
    <string name="username_bracket">[UserName]</string>
    <string name="send">Send</string>
    <string name="content">[content]</string>
    <string name="message_content">[Message Content]</string>
    <string name="sample_time">12:00 am</string>
    <string name="e_mail">E-mail:</string>
    <string name="message_owner">Message Owner</string>
    <string name="no_books_found">No Books Found</string>
    <string name="book_thumbnail">Book Thumbnail</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="book_title_plain">Book Title</string>
    <string name="book_authors">Book Authors</string>
    <string name="book_description">Book Description</string>
    <string name="edit_book">Edit Book</string>
    <string name="edit">Edit</string>
    <string name="retail_price">Retail Price:</string>
    <string name="cheapest_offer">Cheapest Offer:</string>
    <string name="condition_bracket">[CONDITION]</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="delete">Delete</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="seller_header">Seller</string>
    <string name="my_books">My Books</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="current_offers">Current Offers</string>
</resources>