<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle"
    android:paddingBottom="20dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtV_displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/display_name"
                android:textColor="@color/txt_white50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtE_displayName"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_inputs_starting_screens"
                android:hint="@string/username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtV_displayName" />

            <TextView
                android:id="@+id/txtV_HofID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/hofstra_id"
                android:textColor="@color/txt_white50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtE_displayName" />

            <EditText
                android:id="@+id/txtE_HofID"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_inputs_starting_screens"
                android:hint="@string/hint_hofstra_ID"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtV_HofID" />

            <TextView
                android:id="@+id/txtV_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/phone_number"
                android:textColor="@color/txt_white50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtE_HofID" />

            <EditText
                android:id="@+id/txtE_phone_number"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:inputType="phone"
                android:background="@drawable/edit_text_inputs_starting_screens"
                android:hint="@string/example_phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtV_phone_number" />

            <TextView
                android:id="@+id/txtV_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@color/txt_white50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtE_phone_number" />

            <EditText
                android:id="@+id/txtE_email"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_inputs_starting_screens"
                android:hint="@string/example_hofstra_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtV_email" />

            <TextView
                android:id="@+id/txtV_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/txt_white50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtE_email" />

            <EditText
                android:id="@+id/txtE_password"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_inputs_starting_screens"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtV_password" />

            <TextView
                android:id="@+id/txtV_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/confirm_password"
                android:textColor="@color/txt_white50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtE_password" />

            <EditText
                android:id="@+id/txtE_confirm_password"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_inputs_starting_screens"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtV_confirm_password" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttons_orange"
                android:text="@string/create_account"
                android:textColor="@color/btntxt_brown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtE_confirm_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>