<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/rectangle"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">

    <EditText
        android:id="@+id/txtE_user_name"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_account_edit"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/txt_grayE2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtE_phone_number"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_account_edit"
        android:hint="@string/example_phone"
        android:textColor="@color/white"
        android:textColorHint="@color/txt_grayE2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtE_user_name" />

    <EditText
        android:id="@+id/txtE_password"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_account_edit"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/txt_grayE2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtE_phone_number" />

    <Button
        android:id="@+id/btn_profile_picture"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_account_edit"
        android:text="Change Profile Picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtE_password" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_account_edit"
        android:text="@string/save_changes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_profile_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>